--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
                 <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro construindo APis Rest com Nodejs da alura books"></div>
                 <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="Livro sobre assecibilidade da alura books"></div>
                 <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol da alura books"></div>
-                ...
             </div>
 
             <!-- If we need navigation buttons -->
@@ -109,7 +108,7 @@
             <div class="swiper-button-next"></div>
         </div>
     
-        <div class="cartão">
+        <div class="card">
             <div class="card__descrição">
                 <div class="descrição">
                    <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
@@ -153,7 +152,7 @@
                 <div class="swiper-button-next"></div>
             </div>
     
-            <div class="cartão">
+            <div class="card">
                 <div class="card__descrição">
                     <div class="descrição">
                        <img src="img/Estrelinhas.svg" class="descrição__estrelinhas" alt="Avaliação 5 estrelas">
