--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
              <footer class="rodapé">
                  <h2 class="rodapé__titulo">Grupo Alura</h2>
                  <ul class="lista__rodapé">
-                    <li class="lista-rodapé_titulo">Educação</li>
+                    <li class="lista-rodapé__titulo">Educação</li>
                     <li class="lista-rodapé__item">
                         <img src="img/CasaDoCodigo.svg" alt="Logo da casa do código">
                         <a href="#" class="lista-rodapé__link">Casa do código</a>
@@ -226,7 +226,7 @@
                     </li>
                 </ul>
                 <ul class="lista-rodapé">
-                    <li class="lista-rodapé_titulo">Educação online</li>
+                    <li class="lista-rodapé__titulo">Educação online</li>
                     <li class="lista-rodapé__item">
                         <img src="img/Alura.svg" alt="Logo da Alura">
                         <a href="#" class="lista-rodapé__link">Alura</a>
@@ -257,7 +257,7 @@
                     </li>                        
                 </ul>
                 <ul class="lista-rodapé">
-                    <li class="lista-redapé__titulo">Comunidade</li>
+                    <li class="lista-rodapé__titulo">Comunidade</li>
                     <li class="lista-rodapé__item">
                         <img src="img/HipstersJobs.svg" alt="Logo do Hispster pomto Tech">
                         <a href="#" class="lista-rodapé__link">Hipster ponto Tech</a>
