--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="cabeçalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabeçalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -45,7 +45,7 @@
 
         <ul class="opções">
             <input type="checkbox" id="opções-menu" class="opções__botão">
-            <label for="opções-menu">
+            <label for="opções-menu" class="opções__rotulo">
                 <li class="opções__item">Categorias</li>
             </label>
 
@@ -73,8 +73,14 @@
 
         <div class="container">
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#" class="container__link">
+                <img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+                <p class="container__texto">Minha sacola</p> 
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
 
@@ -84,9 +90,10 @@
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
 
-    <section class="carrosel">
+    <section class="carrossel">
         <h2 class="carrossel__titulo">Novos lançamentos</h2>
         <!-- Slider main container -->
+        <div class="carrossel__container">
         <div class="swiper">
             <!-- Additional required wrapper -->
             <!-- If we need pagination -->
@@ -125,12 +132,14 @@
                     <a href="#" class="botões__ancora">Saiba mais</a>
             </div>
         </div>
+        </div>
         </section>
 
-        <section class="carrosel">
+        <section class="carrossel">
             <h2 class="carrossel__titulo">Mais Vendidos</h2>
         
             <!-- Slider main container -->
+            <div class="carrossel__container">
             <div class="swiper">
                 <!-- Additional required wrapper -->
                 <!-- If we need pagination -->
@@ -170,11 +179,12 @@
                         <a href="#" class="botões__ancora">Saiba mais</a>
                 </div>
             </div>
+            </div>
             </section>
 
             <section class="tópicos">
                 <h2 class="tópicos__titulo">Tópicos Visitados Recentemente</h2>
-                <ul class="tópicos__listas">
+                <ul class="tópicos__lista">
                     <li class="tópicos__item">
                         <a href="#" class="tópicos__link">Android</a>
                     </li>
@@ -214,7 +224,7 @@
 
              <footer class="rodapé">
                  <h2 class="rodapé__titulo">Grupo Alura</h2>
-                 <ul class="lista__rodapé">
+                 <ul class="lista-rodapé">
                     <li class="lista-rodapé__titulo">Educação</li>
                     <li class="lista-rodapé__item">
                         <img src="img/CasaDoCodigo.svg" alt="Logo da casa do código">
